fix: mobile notice text wrap issue

--- a/ui-components/src/headers/SiteHeader.scss
+++ b/ui-components/src/headers/SiteHeader.scss
@@ -342,7 +342,6 @@
     @apply pb-2;
     @apply pr-3;
     margin: auto;
-    height: 36px;
 
     a,
     a:hover {
